--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -1,17 +1,13 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-     Open Browser
-    </ion-title>
+    <ion-title>tab4</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Open Browser</ion-title>
+      <ion-title size="large">tab4</ion-title>
     </ion-toolbar>
   </ion-header>
-
-  <ion-button expand="block" class="ion-margin" (click)="openBrowser">Open Tab: Google</ion-button>
 </ion-content>
