--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -18,7 +18,7 @@
 
     <ion-tab-button tab="tab4">
       <ion-icon aria-hidden="true" name="square"></ion-icon>
-      <ion-label>Tab 4</ion-label>
+      <ion-label>File System</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
